# nicemail

./: Agents.md  Design.md  README.md  changelog.md  main.py  pyproject.toml
docs/: auth.md  cli.md  common.md  credentials.md  message.md  system_contracts.md  tests.md  transport.md
examples/: dry_run_basic.py  send_google.py  send_ms_graph.py
nicemail/: __init__.py
send/: __init__.py  cli.py  client.py
send/auth/: __init__.py  google_device_code.py  google_loopback.py  msal_device_code.py
send/common/: errors.py  logging.py  models.py  paths.py
send/credentials/: __init__.py  paths.py  store.py
send/message/: __init__.py
send/runtime/: __init__.py  context.py  env.py  paths.py
send/transport/: __init__.py  api.py  dry_run_transport.py  google_transport.py  ms_graph.py  ms_graph_transport.py  send.py
tests/: test_cli_dry_run.py  test_client_creation.py  test_email_client_device_code.py  test_email_client_message.py  test_email_client_send.py  test_google_device_code.py  test_google_transport.py  test_ms_graph_transport.py
