[project]
name = "nicemail"
version = "0.1.0"
authors = [
  { name="Rajinder Mavi", email="rajinder@mavi.phd" },
]
description = "A simple email package"
readme = "README.md"
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICENCSE"]

[project.urls]
Homepage = "https://github.com/rajindermavi/nicemail"
Issues = "https://github.com/rajindermavi/nicemail/issues"

dependencies = [
    "cryptography>=46.0.3",
    "msal>=1.34.0",
    "platformdirs>=4.5.1",
    "pytest>=9.0.2",
    "requests>=2.32.5",
]

[project.scripts]
nicemail = "send.cli:main"


[tool.setuptools.packages.find]
where = ["."]
include = ["send*", "nicemail*"]
