[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nicemail"
version = "0.1.0"
description = "A simple email package"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }

authors = [
  { name = "Rajinder Mavi", email = "rajinder@mavi.phd" },
]

classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

dependencies = [
    "cryptography>=46.0.3",
    "msal>=1.34.0",
    "platformdirs>=4.5.1",
    "requests>=2.32.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.2",
    "build",
    "twine",
]

[project.urls]
Homepage = "https://github.com/rajindermavi/nicemail"
Issues = "https://github.com/rajindermavi/nicemail/issues"

[project.scripts]
nicemail = "send.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["send*", "nicemail*"]
